# linear-regression

./: README.md
linear-regression/: pyproject.toml  regression.ipynb
