[tool.poetry]
name = "linear-regression"
version = "0.1.0"
description = ""
authors = ["malakkhasawneh2 <malakkhasawneh2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"
numpy = "1.21.1"
matplotlib = "^3.5.0"
jupyter = "^1.0.0"
jupyterlab = "^3.2.3"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
